css/media.css
/* ... */
.activeCollapse, .collapsible:hover {
    background-color: var(--marine);
}

.collapsible:after {
    content: '\2B9F';
    color: #f5f5f5;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.activeCollapse:after {
    content: "\2B9D";
}

.contentCollapse {
    padding: 1px; /* Xpx débordement bas pour révéler la pliure */
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    background-color: var(--collapsForm);
    border-bottom: 6px solid #000dc7;
    border-radius: 0 0 10px 10px;
}

/************************************ Le Pied... ***************************************/
footer {
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    margin: 0;
    flex-shrink: 0;
}

.socle {
    position: absolute;
    width: 100%;
    height: 80px;
    /* background-color: #7eaa19; */
    /* border-radius: 0 0 20px 20px; */
}

/******************************* breakpoints - @media queries ***************************/

/******************** Small  (smartphone - moins de 600px) */
@media (max-width: 600px) {
    body {
        width: 98%;
        margin: 0 0 220px 0;
    }
    .searchBox {
        width: 90%;
        margin: 10px auto;
        position: relative;
        left: 50%;
        transform: translateX(-50%);
    }
    .search-form {
        flex-direction: row;
        flex-wrap: wrap;
        gap: 5px;
    }
    .searchInput {
        width: calc(100% - 100px);
        min-width: 150px;
    }
    .boutonTheme {
        display: none !important;
    }
    .menunav a:not(:first-child) {
        display: none;
    }
    .menunav a.menuicon {
        float: right;
        display: block;
    }
    .menunav.break {
        position: relative;
    }
    .menunav.break .menuicon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .menunav.break a {
        float: none;
        display: block;
        text-align: left;
    }
    .menunav a.barefut {
        display: none;
    }
    .searchBox:hover>.searchInput {
        width: 150px;
        padding: 0 6px;
    }
    .column {
        width: 43%;
        display: block;
        margin-bottom: 20px;
    }
    .card {
        height: 160px;
        border-radius: 15px;
    }
    .card i {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: 100px;
    }
    .titrecarte {
        display: none;
    }
    .collabel, .colinput { /* Formulaire Mon Espace -Responsive- passage de 2 colonnes à width:100% */
        width: 93%;
        margin-top: 0;
    }
    .socle {
        background-color: #919094;
        height: 70px;
        box-shadow: var(--footerShadow);
    }
    .socleRadiusUp {
        display: none;
    }
    footer { /* fixer le footer au bas de l'écran pour tabbar */
        position: fixed;
        bottom: 0;
        width: 100%;
        height: 70px;
        margin: 0;
    }
    .txtfootr {
        display: none;
    }
    .icon-bar, a.navlabel {
        color: #000000;
        display: flex;
        overflow-x: auto;
        padding: 5px;
    }
    .navlabel {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        flex-grow: 1;
        min-width: 50px;
        overflow: hidden;
        white-space: nowrap;
        font-size: 14px;
        transition: all 0.3s ease-in-out;
    }
    .icon-bar .material-icons {
        font-size: 28px;
    }
    .iconeTheme {
        color: var(--btnFontColor);
    }
}

/******************** Medium  (tablette) */
@media (min-width: 601px) and (max-width: 999px) {
    .menunav a:not(:first-child) {
        display: none;
    }
    .searchBox {
        width: 80%;
        max-width: 500px;
        position: relative;
        left: 50%;
        transform: translateX(-50%);
    }
    .menunav a.menuicon {
        float: right;
        display: block;
    }
    .menunav.break {
        position: relative;
    }
    .menunav.break .menuicon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .menunav.break a {
        float: none;
        display: block;
        text-align: left;
    }
    .column {
        width: 43%;
        display: block;
        margin: 10px;
    }
    .card {
        height: 280px;
        width: 280px;
        padding-top: 12%;
    }
    .titrecarte {
        display: block;
        margin: auto;
    }
    .c1 {border-radius: 70px 70px 0 70px; margin: 0 15px 0 0;}
    .c2 {border-radius: 70px 70px 70px 0; margin: 0 0 0 15px;}
    .c3 {border-radius: 70px 0 70px 70px; margin: 0 15px 0 0;}
    .c4 {border-radius: 0 70px 70px 70px; margin: 0 0 0 15px;}
    .txtfootr {
        display: none;
        height: 0 !important; /* Supprime l'espace réservé */
        margin: 0 !important; /* Supprime les marges */
        padding: 0 !important; /* Supprime le padding */
    }
}

/******************** Large  (ordi portable et desktop, entre 1000px et 2000px) */
@media (min-width: 1000px) {
    .column {
        width: 22%;
        display: block;
        margin-bottom: 10px;
    }
    .card {
        height: 280px;
        width: 250px;
        border-radius: 70px 6%;
    }            
    .card i {
        font-size: 150px;
        padding: 15px;
    }
   /* .formCentered {
        width: 80%;
    }*/
}

/******************** Extra large  (écran de 2000px et plus) */
@media (min-width: 2000px) {
    .column {
        width: 43%/* 830px */;
        display: block;
        margin-bottom: 15px;
    }
    .card {
        display: flex;
        height: 330px;
        width: auto;
        border-radius: 70px;
    }
    .card i {
        font-size: 180px;
        margin: auto 30px;
    }
    .titrecarte {
        display: block;
        margin: auto 80px;
        font-size: 100px;
    }
    /*.formCentered {
        width: 80%;
    }*/
}
/* ... */

